--- a/index.html
+++ b/index.html
@@ -261,27 +261,6 @@
       .main_title img {
         width: 100%;
       }
-      /* .slide_line::before {
-        content: "";
-        position: absolute;
-        height: 1px;
-        background-color: #fff;
-        width: 100%;
-        left: 0;
-        top: 50%;
-        z-index: 9;
-      } */
-      /* .main_slide_line::before {
-        content: "";
-        position: absolute;
-        height: 1px;
-        background-color: #fff;
-        width: 30%;
-        right: 0;
-        top: 50%;
-        z-index: 9;
-      } */
-
       .title h3 {
         color: #fff;
         position: relative;
@@ -496,7 +475,7 @@
               <div class="dark-overlay"></div>
               <div class="slide main_slide_line">
                 <div class="img">
-                  <img src="/img/home_banner/SLIDE_1.jpg" alt="" />
+                  <img src="/img/home_banner/PINCODE_Home_Banner_1.jpg" alt="" />
                 </div>
                 <div class="title main_title">
                   <svg id="logo_svg" width="510" height="132" viewBox="0 0 510 132" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -513,15 +492,12 @@
               </div>
               <div class="slide slide_line">
                 <div class="img">
-                  <img src="/img/home_banner/SLIDE_2.jpg" alt="" />
+                  <img src="/img/home_banner/PINCODE_Home_Banner_2.jpg" alt="" />
                 </div>
                 <div class="title">
                   <h3>About us</h3>
                   <p>
-                    PINCODE is an idea born from ambition, shaped by experience,
-                    and driven by vision. We are a new-age real estate
-                    development firm that believes in creating spaces that stand
-                    the test of time.
+                    Pincode Infra is an idea born from ambition, shaped by experience, and driven by vision. We are a new-age real estate development company that believes in creating spaces that stand the test of time.
                   </p>
                   <div class="de-flex-col banner_btn">
                     <div
@@ -546,15 +522,12 @@
               </div>
               <div class="slide slide_line">
                 <div class="img">
-                  <img src="/img/home_banner/SLIDE_3.jpg" alt="" />
+                  <img src="/img/home_banner/PINCODE_Home_Banner_3.jpg" alt="" />
                 </div>
                 <div class="title">
                   <h3>Projects</h3>
                   <p>
-                    We are tirelessly pushing the boundaries of innovation with
-                    commercial and residential spaces. This ensures that
-                    whatever we build holds firm in confidence in terms of
-                    quality and future readiness.
+                    We are tirelessly pushing the boundaries of innovation with commercial and residential spaces. This ensures that whatever we build stands firm in confidence in terms of quality and future readiness.
                   </p>
                   <div class="de-flex-col banner_btn">
                     <div
@@ -590,15 +563,12 @@
               </div>
               <div class="slide slide_line">
                 <div class="img">
-                  <img src="/img/home_banner/SLIDE_4.jpg" alt="" />
+                  <img src="/img/home_banner/PINCODE_Home_Banner_4.jpg" alt="" />
                 </div>
                 <div class="title">
-                  <h3>Features</h3>
+                  <h3>Advantages</h3>
                   <p>
-                    We take a million considerations before moving ahead with a
-                    project. It is an essential step to ensure that what we
-                    deliver holds paramount standards of comfort, utility, and
-                    convenience.
+                    Our decisions are rooted in future-forward thinking. From airports to heritage corridors, our Ayodhya project is backed by transformational infrastructure that makes spiritual living both meaningful and financially sound.
                   </p>
                   <div class="de-flex-col banner_btn">
                     <div
@@ -623,7 +593,7 @@
               </div>
               <div class="slide slide_line">
                 <div class="img">
-                  <img src="/img/home_banner/SLIDE_5.jpg" alt="" />
+                  <img src="/img/home_banner/Pincode_Home_Banner_5.jpg" alt="" />
                 </div>
                 <div class="title" style="text-align: center">
                   <h3>Want to know more ?</h3>
@@ -678,15 +648,9 @@
                 <div class="wow scaleIn bg-white">
                   <div class="subtitle id-color mb-3">About</div>
                   <!-- <img src="/img/LogoBrown.png" alt=""/> -->
-                  <div class="subtitle id-color wow fadeInUp mb-3">Pincode</div>
+                  <div class="subtitle id-color wow fadeInUp mb-3">Pincode Infra</div>
                   <p class="wow fadeInUp bg-white">
-                    PINCODE is an idea born from ambition, shaped by experience,
-                    and driven by vision. We are a new-age real estate
-                    development firm that believes in creating spaces that stand
-                    the test of time — in design, in value, and in experience.
-                    With a keen eye for location, a deep commitment to quality,
-                    and a philosophy of meaningful design, we’re here to change
-                    the way people perceive commercial and lifestyle spaces.
+                    Pincode Infra is an idea born from ambition, shaped by experience, and driven by vision. We are a new-age real estate development company that believes in creating spaces that stand the test of time; in design, in value, and in experience. With a keen eye for location, a deep commitment to quality, and a philosophy of meaningful design, we’re here to change the way people perceive commercial and lifestyle spaces.
                   </p>
                 </div>
               </div>
@@ -897,9 +861,8 @@
                   class="subtitle id-color wow fadeInUp mb-3"
                   style="color: #fff"
                 >
-                  Capitol Avenue
                 </div>
-                <h2 class="wow fadeInUp">Features</h2>
+                <h2 class="wow fadeInUp">Key Advantages of Our Ayodhya Vision</h2>
               </div>
             </div>
           </div>
@@ -918,18 +881,13 @@
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 py-5 pe-lg-5">
-                  <h3 class="">Prime Location</h3>
+                  <h3 class="">Direct Airport Access</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 2 Guests </span>
                     <span class="me-4"> 30 ft </span>
                   </div> -->
                   <p class="pe-lg-5">
-                    Situated in the heart of Noida’s thriving business district,
-                    Capitol Avenue offers unrivaled accessibility to major
-                    transportation hubs, corporate centers, and premium
-                    neighborhoods. Its strategic location enhances connectivity,
-                    supports high footfall, and positions businesses for
-                    sustainable growth and success remarkably.
+                    Located minutes from Maharishi Valmiki International Airport, our project offers unmatched connectivity for tourism, hospitality, and second-home investment in one of India’s most sacred cities.
                   </p>
                   <button
                     class="btn-main mt-2 open-popup-btn text-center w-full"
@@ -955,18 +913,13 @@
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 offset-lg-6 py-5 ps-lg-5">
-                  <h3 class="">Modern Design</h3>
+                  <h3 class="">Faith-Driven Footfall</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 2 Guests </span>
                     <span class="me-4"> 30 ft </span>
                   </div> -->
                   <p class="pe-lg-5">
-                    Capitol Avenue showcases a modern architectural design that
-                    seamlessly blends functionality with aesthetic appeal. The
-                    thoughtfully planned layout, cutting-edge infrastructure,
-                    and premium finishes create inspiring workspaces and retail
-                    environments, setting new benchmarks for innovation and
-                    contemporary elegance for lasting impact.
+                    With year-round pilgrim activity and spiritual events, Ayodhya ensures consistent visitor traffic. Creating a stable rental and hospitality market, unlike any seasonal destination.
                   </p>
                   <button
                     class="btn-main mt-2 open-popup-btn text-center w-full"
@@ -992,18 +945,13 @@
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 py-5 pe-lg-5">
-                  <h3 class="">State-of-the-Art Amenities</h3>
+                  <h3 class="">Ring Road Advantage</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 2 Guests </span>
                     <span class="me-4"> 30 ft </span>
                   </div> -->
                   <p class="pe-lg-5">
-                    Offering a comprehensive range of state-of-the-art
-                    amenities, Capitol Avenue ensures a superior working and
-                    shopping experience. Facilities include advanced security,
-                    high-speed elevators, luxurious lobbies, and efficient
-                    infrastructure, all designed to promote comfort,
-                    productivity, and a vibrant urban lifestyle with excellence.
+                    The upcoming 67 km ring road unlocks fresh plotting and warehousing markets. Our project’s positioning along this corridor offers capital appreciation through logistics-backed growth.
                   </p>
                   <button
                     class="btn-main mt-2 open-popup-btn text-center w-full"
@@ -1029,18 +977,13 @@
                 </div>
                 <!-- Text -->
                 <div class="col-lg-6 offset-lg-6 py-5 ps-lg-5">
-                  <h3 class="">Integrated Commercial Ecosystem</h3>
+                  <h3 class="">Cultural Capital of India</h3>
                   <!-- <div class="fs-14 mb-3">
                     <span class="me-4"> 4 Guests </span>
                     <span class="me-4"> 60 ft </span>
                   </div> -->
                   <p class="pe-lg-5">
-                    Capitol Avenue establishes an integrated commercial
-                    ecosystem by uniting office spaces, high-street retail
-                    zones, and recreational areas. This holistic environment
-                    fosters collaboration, drives business synergy, and creates
-                    a dynamic platform for growth, making it an iconic landmark
-                    for visionary enterprises.
+                    Situated close to heritage paths like Ram Path and Janm Path, our development offers access to a spiritually and culturally enriched ecosystem that enhances value and experience.
                   </p>
                   <button
                     class="btn-main mt-2 open-popup-btn text-center w-full"
