--- a/ongoing-project.html
+++ b/ongoing-project.html
@@ -251,8 +251,8 @@
                 <div class="container relative z-index-1000">
                     <div class="row justify-content-center">
                         <div class="col-lg-6 text-center">
-                          <h1>Capitol Avenue</h1>
-                            <p class="lead mt-3" style="color: #fff;">Capitol Avenue stands as a premier investment destination in Noida Sector 62, merging modern design, strategic location, and hyper-local advantages that drive financial growth and enhance quality of life remarkably.</p>
+                          <h1>Capitol Avenue <br> Sector 62, Noida</h1>
+                            <p class="lead mt-3" style="color: #fff;">Capitol Avenue stands as a premier corporate destination in Noida Sector 62, merging modern design, seamless connectivity, and hyper-local advantages that drive business growth and elevate urban living experiences.</p>
                             <ul class="crumb">
                                 <li><a href="index.html">Home</a></li>
                                 <li class="active">Ongoing Project</li>
@@ -276,8 +276,8 @@
 
                         <div class="col-lg-5">
                             <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
-                                <h2 class="wow fadeInUp">Strategic Location & Connectivity</h2>
-                                <p>Capitol Avenue is strategically located in Noida Sector 62, offering unparalleled connectivity to major highways, metro stations, and commercial hubs, ensuring commuter access and increased property value appreciation over time.</p>
+                                <h2 class="wow fadeInUp">Location & Connectivity</h2>
+                                <p>Capitol Avenue offers unparalleled access to highways, metro stations, and business districts, ensuring smooth commuter flow and reinforcing long-term property value.</p>
                             </div>
                         </div>                                                
                     </div>
@@ -286,7 +286,7 @@
                         <div class="col-lg-5">
                             <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Robust Financial Growth</h2>
-                                <p>Investing in Capitol Avenue unlocks robust financial growth. Its strategic location and innovative design attract quality tenants, ensuring consistent rental yields and sustainable long-term capital gains in a thriving market.</p>
+                                <p>Establishing a presence at Capitol Avenue unlocks strong corporate potential. Its innovative design and tenant appeal ensure stable yields and long-term appreciation.</p>
                             </div>
                         </div>
 
@@ -311,7 +311,7 @@
                         <div class="col-lg-5">
                             <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Hyper-Local Economic Environment</h2>
-                                <p>Capitol Avenue benefits from a vibrant hyper-local economic environment. Proximity to established business clusters and lifestyle centers drives demand, creating a stable ecosystem that supports revenue growth and investor confidence.</p>
+                                <p>Surrounded by thriving commercial zones and lifestyle hubs, Capitol Avenue benefits from consistent demand and a stable economic ecosystem.</p>
                             </div>
                         </div>                                                
                     </div>
@@ -320,7 +320,7 @@
                         <div class="col-lg-5">
                             <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Advanced Infrastructure Excellence</h2>
-                                <p>Capitol Avenue features advanced infrastructure with design, finishes, and integrated technology systems. This development ensures operational efficiency, attracts businesses, and contributes to an environment of sustained local growth and productivity.</p>
+                                <p>Featuring premium finishes, integrated tech systems, and smart design, Capitol Avenue supports operational efficiency and long-term scalability.</p>
                             </div>
                         </div>
 
@@ -345,7 +345,7 @@
                         <div class="col-lg-5">
                             <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Diverse Tenant Mix</h2>
-                                <p>Capitol Avenue attracts a diverse tenant mix from established corporates to innovative start-ups. This diversity drives synergies and creates a local ecosystem supporting stable income streams and economic development remarkably.</p>
+                                <p>The development attracts a diverse base—from corporates and start-ups to premium retail brands. This tenant variety boosts ecosystem synergy and economic momentum.</p>
                             </div>
                         </div>                                                
                     </div>
@@ -354,7 +354,7 @@
                         <div class="col-lg-5">
                             <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                                 <h2 class="wow fadeInUp">Community Integration & Lifestyle</h2>
-                                <p>Capitol Avenue is embedded within a thriving community that offers lifestyle amenities. Its proximity to schools, shopping centers, and recreational facilities enhances quality of life, fostering a balanced work-leisure environment.</p>
+                                <p>Located near top schools, shopping zones, and wellness amenities, Capitol Avenue offers a balanced work-life setting ideal for modern professionals.</p>
                             </div>
                         </div>
 
