--- a/upcoming-project.html
+++ b/upcoming-project.html
@@ -271,9 +271,7 @@
               <div class="col-lg-6 text-center">
                 <h1>Upcoming Project</h1>
                 <p class="lead mt-3">
-                  Take advantage of our exceptional facilities. From relaxation
-                  to recreation, we have everything you need for an
-                  unforgettable stay.
+                  Discover the promise of Ayodhya’s most ambitious township. A transformative address where sacred tradition meets smart-city innovation. PincodeInfra’s upcoming township in Ayodhya offers a unique blend of spiritual living, modern design, and future-ready infrastructure.
                 </p>
                 <ul class="crumb">
                   <li><a href="index.html">Home</a></li>
@@ -302,9 +300,9 @@
 
               <div class="col-lg-5">
                 <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
-                  <h2 class="wow fadeInUp">Robust Infrastructure Development</h2>
+                  <h2 class="wow fadeInUp">Deep Spiritual Connection</h2>
                   <p>
-                    With ₹85,000 crore planned under the Ayodhya Master Plan 203. Ayodhya is witnessing significant infrastructure development with improved roads, connectivity, and urban planning. This rapid development boosts investor confidence, raises property values, and creates a thriving environment for commercial investments
+                    Living in Ayodhya means experiencing serenity, ancient rituals, and inner peace. Built into the very landscape of this thoughtfully planned township designed to inspire spiritual well-being.
                   </p>
                 </div>
               </div>
@@ -313,9 +311,9 @@
             <div class="row g-0 align-items-center justify-content-center">
               <div class="col-lg-5">
                 <div class="me-lg-5 wow scaleIn bg-white z-index-top">
-                  <h2 class="wow fadeInUp">Appreciation Through Demand</h2>
+                  <h2 class="wow fadeInUp">Lucrative Financial Opportunity</h2>
                   <p>
-                    With ₹2,200 crore to be invested in developing a 1,200-acre township over 5 years. Investments in Ayodhya are poised for substantial appreciation driven by demand. The growing influx of residents and businesses stimulates market dynamics, leading to sustained property value growth and high returns.
+                    With soaring real estate demand, Ayodhya’s growth corridors promise high returns. This township ensures long-term value with early-mover investment opportunities and consistent appreciation potential.
                   </p>
                 </div>
               </div>
@@ -348,9 +346,9 @@
 
               <div class="col-lg-5">
                 <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
-                  <h2 class="wow fadeInUp">Spiritual Tourism Boost</h2>
+                  <h2 class="wow fadeInUp">Heritage Meets Innovation</h2>
                   <p>
-                    Ayodhya’s rich cultural heritage attracts spiritual tourism, fueling local economic growth. Over 500 private initiatives are underway across religious sites in UP, including Ayodhya. This promotes an additional influx of visitors, enhances demand for hospitality, retail, and real estate, driving investment opportunities and creating revenue streams.
+                    PincodeInfra’s township combines the legacy of Ayodhya with cutting-edge infrastructure; wide roads, utilities grid, and smart-city features to deliver sustainable living in a heritage-rich zone.
                   </p>
                 </div>
               </div>
@@ -359,9 +357,9 @@
             <div class="row g-0 align-items-center justify-content-center">
               <div class="col-lg-5">
                 <div class="me-lg-5 wow scaleIn bg-white z-index-top">
-                  <h2 class="wow fadeInUp">Rental Income Potential</h2>
+                  <h2 class="wow fadeInUp">Vibrant Community Network</h2>
                   <p>
-                    Ayodhya offers attractive rental income potential driven by a steady flow of tourists and locals. Investors benefit from stable, recurring revenue streams as demand for short-term and long-term rentals grows.
+                    The township is envisioned as a hub for like-minded individuals who value culture, community, and lifestyle. Fostering organic growth and a shared spiritual-modern experience.
                   </p>
                 </div>
               </div>
@@ -394,9 +392,9 @@
 
               <div class="col-lg-5">
                 <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
-                  <h2 class="wow fadeInUp">Enhanced Community Infrastructure</h2>
+                  <h2 class="wow fadeInUp">Global Tourist Hub</h2>
                   <p>
-                    Investing in Ayodhya supports development of community infrastructure including upgraded utilities, transportation networks, and public spaces. This also includes the construction of a 67.17-kilometer-long ring road around Ayodhya, featuring two major bridges over the Saryu River, seven flyovers, and four railway overbridges. These improvements boost quality of life and drive property appreciation over the long term.
+                    Ayodhya’s airport, temple corridors, and world-class tourism projects are creating a global magnet. This township will benefit from constant footfall, hospitality demand, and economic upliftment.
                   </p>
                 </div>
               </div>
@@ -405,9 +403,9 @@
             <div class="row g-0 align-items-center justify-content-center">
               <div class="col-lg-5">
                 <div class="me-lg-5 wow scaleIn bg-white z-index-top">
-                  <h2 class="wow fadeInUp">Capitalizing on Demand Surges</h2>
+                  <h2 class="wow fadeInUp">Cultural Renaissance Catalyst</h2>
                   <p>
-                    A continuous influx of domestic and international investors capitalizes on demand surges, fueling market confidence, elevating asset values, and transforming Ayodhya into a premium investment destination with consistent upward trends. This is due to the New airport (Maharishi Valmiki International Airport), better roads, and rail links that are under development.
+                    The township lies at the heart of Ayodhya’s cultural revival, with museums, performance spaces, and heritage architecture embedded into its urban fabric, adding long-term prestige to your address.
                   </p>
                 </div>
               </div>
